// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard should render with Classified in grey label 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      whispering={true}
    >
      <span
        className="classifiedLabel"
      >
        Classified
      </span>
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      yelling={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      whispering={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with bold keyword 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      whispering={true}
    >
      SEEK Asia
    </Text>
    <div>
      <Text
        baseline={true}
        className="positionTitle"
        key="0"
        regular={false}
        strong={true}
        yelling={true}
      >
        Senior
      </Text>
      <Text
        baseline={true}
        className="positionTitle"
        key="1"
        regular={true}
        strong={false}
        yelling={true}
      >
         Software 
      </Text>
      <Text
        baseline={true}
        className="positionTitle"
        key="2"
        regular={false}
        strong={true}
        yelling={true}
      >
        Engineer
      </Text>
      <Text
        baseline={true}
        className="positionTitle"
        key="3"
        regular={true}
        strong={false}
        yelling={true}
      >
         (6 months Contract)
      </Text>
    </div>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      whispering={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with company confidential in grey label 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      whispering={true}
    >
      <span
        className="confidentialLabel"
      >
        Company Confidential
      </span>
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      yelling={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      whispering={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with default props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      whispering={true}
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      yelling={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      whispering={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with featured label 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      whispering={true}
    >
      <span
        className="featuredLabel"
      >
        Feature
      </span>
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      yelling={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      whispering={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with selling points props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      whispering={true}
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      regular={true}
      yelling={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="sellingPointsSection"
  >
    <ul
      className="sellingPointsList"
    >
      <li
        key="0"
      >
        <Text
          baseline={true}
          className="sellingPoint"
          whispering={true}
        >
          We practice a vibrant & energetic office culture
        </Text>
      </li>
      <li
        key="1"
      >
        <Text
          baseline={true}
          className="sellingPoint"
          whispering={true}
        >
          Our company supports a fun yet balanced working environment
        </Text>
      </li>
      <li
        key="2"
      >
        <Text
          baseline={true}
          className="sellingPoint"
          whispering={true}
        >
          We support a safe environment for our employees
        </Text>
      </li>
    </ul>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      whispering={true}
    >
      Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoList"
      >
        <div>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <LocationIcon />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            whispering={true}
          >
            <MoneyIcon />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;
